--- a/admin.html
+++ b/admin.html
@@ -63,49 +63,37 @@
                         <a onclick="addVid(1)" class="add up-down-left-right"></a>
                     </li>
                     <li id="vid1-1" class="vid-cover">
-                        <video controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
+                        <div class="picture"></div>
                         <p>speaker............</p>
                         <h4>subgect</h4>
                         <a href="sighnIn.html">listen</a>
                     </li>
                     <li id="vid1-2" class="vid-cover">
-                        <video controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
+                        <div class="picture"></div>
                         <p>speaker............</p>
                         <h4>subgect</h4>
                         <a href="sighnIn.html">listen</a>
                     </li>
                     <li id="vid1-3" class="vid-cover">
-                        <video controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
+                        <div class="picture"></div>
                         <p>speaker............</p>
                         <h4>subgect</h4>
                         <a href="sighnIn.html">listen</a>
                     </li>
                     <li id="vid1-4" class="vid-cover">
-                        <video controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
+                        <div class="picture"></div>
                         <p>speaker............</p>
                         <h4>subgect</h4>
                         <a href="sighnIn.html">listen</a>
                     </li>
                     <li id="vid1-5" class="vid-cover">
-                        <video controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
+                        <div class="picture"></div>
                         <p>speaker............</p>
                         <h4>subgect</h4>
                         <a href="sighnIn.html">listen</a>
                     </li>
                     <li id="vid1-6" class="vid-cover">
-                        <video controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
+                        <div class="picture"></div>
                         <p>speaker............</p>
                         <h4>subgect</h4>
                         <a href="sighnIn.html">listen</a>
