--- a/chanell.html
+++ b/chanell.html
@@ -38,81 +38,63 @@
                     </ul>
                 </div>
             </div>
-            <div class="list">
-                <ul>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                    <li class="vid-cover">
-                        <video class="list-vid left" controls>
-                            <source src="css/videos/vid.mp4" type="video/mp4">
-                        </video>
-                        <p>speaker............</p>
-                        <h4>subgect</h4>
-                        <a href="sighnIn.html">listen</a> 
-                    </li>
-                </ul>
-            </div>
-            <div class="left main-com">
-                <video class="main-vid" controls>
-                    <source src="css/videos/vid.mp4" type="video/mp4">
-                </video>
-                <a class="switch-bar right" onclick="switchBar('comments-cover')">comments</a>
-                <a class="switch-bar" onclick="switchBar('phone-list')">chanell</a>
-                <div id="comments-cover" class="comments">
+            <video class="main-vid" controls>
+                <source src="css/videos/vid.mp4" type="video/mp4">
+            </video>
+            <a class="switch-bar right" onclick="switchBar('')">chanell</a>
+            <a class="switch-bar" onclick="switchBar('comments')">comments</a>
+            <ul class="list">
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+                <li class="pick-cover">
+                    <div class="picture"></div>
+                    <p>speaker............</p>
+                    <h4>subgect</h4>
+                    <a href="sighnIn.html">listen</a> 
+                </li>
+            </ul>
+            <div class="main-com">
+                <div class="comments">
                     <ul id="comments">
                         <li class="comment">scvb dfgh dfgh dfg</li>
                         <li class="comment">scvfghjkhgdghgghfgdgfhgb dfgh dfgh dfg</li>
@@ -129,89 +111,27 @@
                     <div id="ifAddCom" class="ifAddCom">
                         <a id="sendCom" class="send-btn" onclick="sendCom('sendCom')">want to send a coment?</a> 
                     </div>
-                    <div id="add-comment" class="add-comment show">
-                        <div class="inputs left">
-                            <input type="text" id="name" placeholder="name">
-                            <input type="text" id="mail" placeholder="mail">
-                            <br>
-                            <br>
-                            <vid>
-                                <a class="send-btn" onclick="addComent()" >send to admin</a>
-                                <br>
-                                <br>
-                                <a class="send-btn" onclick="addComent()">send to all</a>
-                            </vid>
+                    <form id="add-comment" class="add-comment show" action="forms.html" method="get">
+                        <div class="inputs">
+                            <div>
+                                <label for="name"></label>
+                                <input type="text" name="name" id="name" placeholder="name" required>
+                            </div>
+                            <div>
+                                <label for="email"></label>
+                                <input type="email" name="email" id="email" placeholder="mail" required>
+                            </div>
+                            <div>
+                                <input type="checkbox" name="anonymous" onclick="checkBox()" id="anonymous">
+                                <label for="anonymous">anonymous emil</label>
+                            </div>
+                            <div>
+                                <input type="submit" value=" send ">
+                            </div>
                         </div>
-                        <textarea id="textComent" class="right"></textarea>
-                    </div>
-                </div>
-                <div id="phone-list" class="show phone-list">
-                    <ul>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                        <li class="vid-cover">
-                            <video class="list-vid left" controls>
-                                <source src="css/videos/vid.mp4" type="video/mp4">
-                            </video>
-                            <p>speaker............</p>
-                            <h4>subgect</h4>
-                            <a href="sighnIn.html">listen</a> 
-                        </li>
-                    </ul>
+                        <label for="text"></label>
+                        <textarea id="text" name="text" class="right" placeholder="write here"></textarea>
+                    </form>
                 </div>
             </div>
         </main>
