--- a/signIn.html
+++ b/signIn.html
@@ -9,18 +9,22 @@
 <body>
 	<header>
 		<h1>srtjsfjsyj</h1>
-	</header>
+	</header>   
 	<main>
 		<form class="info right" action="forms.html" method="get">
-			<label for="yname">Enter you name</label>
-			<input type="text" id="yname" name="yname" >
-			<br>
-			<label for="ypassword">Enter your password</label>
-			<input type="password" id="ypassword" name="ypassword" >
+			<div>
+				<label for="name"></label>
+				<input id="name" type="text" name="name" class="enter information" placeholder="  enter name" required>
+			</div>
+			<div>
+				<label for="passward"></label>
+				<input id="password" type="password" name="password" class="enter information" placeholder="  enter password" required>
+			</div>
+			<div>
+				<input class="enter" type="submit" value=" Enter ">
+			</div>
 			<a href="https://is.aac.ac.il">forgot passward?</a>
-			<input type="submit" value="Submit">
-			<p>don't have a acount?</p>
-			<a href="signUp.html">sign up</a>
+			<p>don't have a acount? <a href="signUp.html">sign up</a></p>	
 		</form>
 		<div id="description" class="info left">
 			<h2>
