--- a/home.html
+++ b/home.html
@@ -49,57 +49,43 @@
 					<a class="up-down-left-right left-right btn-right" onclick="nextRight(1)"></a>
 					<ul class="vids">
 						<li id="vid1-1" class="vid-cover">
-							<video >
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid1-2" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid1-3" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid1-4" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid1-5" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid1-6" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid1-7" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
@@ -118,56 +104,42 @@
 					<a class="up-down-left-right left-right btn-right" onclick="nextRight(2)"></a>
 					<ul class="vids">
 						<li id="vid2-1" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						<li id="vid2-2" class="vid-cover">
-							<video  controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid2-3" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid2-4" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid2-5" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid2-6" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid2-7" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
@@ -186,81 +158,61 @@
 					<a class="up-down-left-right left-right btn-right" onclick="nextRight(3)"></a>
 					<ul class="vids">
 						<li id="vid3-1" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-2" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-3" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-4" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-5" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-6" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-7" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-8" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-9" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
 						</li>
 						<li id="vid3-10" class="vid-cover">
-							<video controls>
-								<source src="css/videos/vid.mp4" type="video/mp4">
-							</video>
+							<div class="picture"></div>
 							<p>speaker............</p>
 							<h4>subgect</h4>
 							<a href="sighnIn.html">listen</a>
