--- a/chanell.html
+++ b/chanell.html
@@ -18,8 +18,8 @@
                 </ul>
                 <div id="lines/x" onclick="mobileMenu()" class="lines right"></div>
             </div>
-            <div id="search" class="show">
-				<label for="head-name">pick a speaker/topik:</label>
+            <div id="search" class="searching show">
+				<label class="labe" for="head-name">pick a speaker/topik:</label>
 				<input type="text" name="head-name" id="head-name">
 				<a class="up-down-left-right search" onclick="search('')"></a>
 			</div>>
