--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
 				</ul>
 				<div id="lines/x" onclick="mobileMenu()" class="in-block lines right"></div>
 			</div>
-			<div id="search" class="show">
+			<div id="search" class="searching show">
 				<label for="head-name">pick a speaker/topik:</label>
 				<input type="text" name="head-name" id="head-name">
 				<a class="up-down-left-right search" onclick="search('')"></a>
